# glexamples

./: .gitignore  CMakeLists.txt
cmake/: PlatformWindowsMSVC.cmake
data/antianti/: compositing.frag  depth_util.frag  geometry.frag  geometry.geom  geometry.vert  postprocessing.frag  screendoor.frag  screendoor.vert  shadowmap.frag  shadowmap.vert  ssao.glsl  transparency_util.frag
data/antianti/meshes/jakobi/: BA4fenst.tga  BA4h1bal.tga  BA4h1bod.tga  BA4h1f10.tga  BA4h1f11.tga  BA4h1f12.tga  BA4h1fas.tga  BA4h1fe1.tga  BA4h1fe2.tga  BA4h1fe3.tga  BA4h1fe4.tga  BA4h1fe5.tga  BA4h1fe6.tga  BA4h1fe7.tga  BA4h1fe8.tga  BA4h1fe9.tga  BA4h1fen.tga  BA4h1lam.tga  BA4h2bal.tga  BA4h2dac.tga  BA4h2fas.tga  BA4h2fe1.tga  BA4h2fe2.tga  BA4h2fe3.tga  BA4h2fe4.tga  BA4h2fe5.tga  BA4h2fe6.tga  BA4h2fe7.tga  BA4h2fen.tga  BA4h3bal.tga  BA4h3f10.tga  BA4h3fa1.tga  BA4h3fas.tga  BA4h3fe1.tga  BA4h3fe2.tga  BA4h3fe3.tga  BA4h3fe4.tga  BA4h3fe5.tga  BA4h3fe6.tga  BA4h3fe7.tga  (+68 more)
data/antianti/meshes/megacity/: Thumbs.db  simple.3ds  simple1.3ds  simple2.3ds  simple2.obj.mtl  skybox.3ds
data/antianti/meshes/mitsuba/: mitsuba.mtl
data/antianti/pathtracing/: geometryTraversal.glsl  materials.glsl  secondOrderRayGeneration.glsl  shadowRayCast.glsl
data/progressive_transparency/: alpha_to_coverage.frag  alpha_to_coverage.vert  compositing.frag  compositing.vert  total_alpha.frag  total_alpha.vert  transparent_colors.frag  transparent_colors.vert
source/: CMakeLists.txt
source/antianti/: CMakeLists.txt  plugin.cpp
source/antianti/antianti/: AntiAnti.cpp  AntiAnti.h  DrawablePathTracingStage.cpp  DrawablePathTracingStage.h  ImageLoader.cpp  ImageLoader.h  PerfCounter.cpp  PerfCounter.h  PostProcessing.cpp  PostProcessing.h  SceneLoader.cpp  SceneLoader.h
source/emptyexample/: EmptyExample.cpp
source/glexamples-viewer/: CMakeLists.txt  main.cpp
source/progressive_transparency/: CMakeLists.txt  MasksTableGenerator.cpp  ProgressiveTransparency.cpp  ProgressiveTransparency.h  ProgressiveTransparencyOptions.cpp  ProgressiveTransparencyOptions.h  plugin.cpp
source/transparency/screendoor/: ScreenDoor.cpp
